force-app/main/default/objects/especie__c/especie__c.object-meta.xml
<CustomObject>
    <label>Especies</label>
    <nameField>
        <label>Nombre de especie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Especies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>