force-app/main/default/objects/especie__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interior</fullName>
                <default>true</default>
                <label>Interior</label>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>