force-app/main/default/objects/especie__c/fields/Mantenimiento__c.field-meta.xml
<CustomField>
    <fullName>Mantenimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mantenimiento</label>
    <type>Checkbox</type>
</CustomField>