force-app/main/default/objects/especie__c/fields/Manto_Preventivo__c.field-meta.xml
<CustomField>
    <fullName>Manto_Preventivo__c</fullName>
    <label>Manto Preventivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meses</valueSetName>
    </valueSet>
</CustomField>