force-app/main/default/objects/especie__c/fields/Temperatura_Ideal__c.field-meta.xml
<CustomField>
    <fullName>Temperatura_Ideal__c</fullName>
    <label>Temperatura Ideal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>