force-app/main/default/objects/especie__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPS</fullName>
                <default>true</default>
                <label>UPS</label>
            </value>
            <value>
                <fullName>PEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>